# review-api

./: README.md
go/: README.md  go.mod  go.sum  main.go
go/db/: connection.go  schema.sql
go/docs/: docs.go  swagger.json  swagger.yaml
go/handlers/: admin.go  auth.go  employee.go
go/middlewares/: auth.go
go/types/: responses.go
rust/: .env.example  Cargo.toml  README.md
rust/src/: main.rs
rust/src/api/: mod.rs  router.rs
rust/src/api/routes/: admin_routes.rs  auth_routes.rs  employee_routes.rs  mod.rs
rust/src/application/services/: auth_service.rs  employee_service.rs  mod.rs  review_service.rs
rust/src/domain/models/: common.rs  employee.rs  mod.rs  review.rs  user.rs
rust/src/infrastructure/: auth.rs  error.rs  mod.rs
rust/src/infrastructure/config/: settings.rs
rust/src/infrastructure/database/: employee_repository.rs  mod.rs  pool.rs  review_repository.rs  user_repository.rs
ts/: .env.example  .example.env  README.md  REQUIREMENTS.md  package-lock.json  package.json  swagger.yaml
ts/prisma/: schema.prisma  seed.ts
ts/src/: app.module.ts  logging.interceptor.ts  main.ts
ts/src/auth/: admin.guard.ts  auth.controller.ts  auth.dto.ts  auth.guard.ts  auth.module.ts  auth.service.ts  authenticated-request.interface.ts  jwt-exception.ts  jwt-payload.interface.ts  jwt.strategy.ts  user.guard.ts
ts/src/employee/: employee.controller.ts  employee.dto.ts  employee.module.ts  employee.service.ts
ts/src/feedback/: feedback.controller.ts  feedback.dto.ts  feedback.module.ts  feedback.service.spec.ts  feedback.service.ts
(+11 files in other folders)
